--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "template"]
 	path = template
 	url = https://freddyslim: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@github.com/Freddyslim/frappe_app_template
+[submodule "erpnext_app_template"]
+	path = erpnext_app_template
+	url = https://github.com/seclution/erpnext_app_template
